--- a/survey_analysis.Rmd
+++ b/survey_analysis.Rmd
@@ -178,6 +178,7 @@ victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(age_categories = case_when
   age_calculated >= 80 & age_calculated <= 84 ~ "80-84"
 ))
 tabyl(victoria_new_ID_gps$age_categories)
+typeof(victoria_new_ID_gps$age_categories)
 ```
 
 ## Gender Victoria
@@ -186,8 +187,8 @@ victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(gender = case_when(
   gender_vic_1.x == 1 & gender_vic_4.x == 1 ~ "Men",
   gender_vic_1.x == 1 ~ "Men",
   gender_vic_2.x == 1 ~ "Women", 
-  gender_vic_3.x == 1 ~ "Trans",
-  gender_vic_4.x == 1 ~ "LGBTQ+"
+  gender_vic_3.x == 1 ~ "Trans or gender non-binary",
+  gender_vic_4.x == 1 ~ "Trans or gender non-binary"
 )) #CHECK!!!!!!!!!!!
 ##gender non-binary
 tabyl(victoria_new_ID_gps$gender)
@@ -410,6 +411,32 @@ victoria_new_ID_gps$income_1 <- factor(victoria_new_ID_gps$income_1, c("No incom
 tabyl(victoria_new_ID_gps$income_1)
 summary(victoria_new_ID_gps$income)
 ```
+
+## Recoding income into 4 categories
+```{r}
+tabyl(victoria_new_ID_gps$income)
+
+victoria_new_ID_gps <- victoria_new_ID_gps %>% mutate(income_2 = case_when(
+  income == 1 ~ "$49,000 or less",
+  income == 2 ~ "$49,000 or less", 
+  income == 3 ~ "$49,000 or less",
+  income == 4 ~ "$49,000 or less", 
+  income == 5 ~ "$49,000 or less",
+  income == 6 ~ "$49,000 or less",
+  income == 7 ~ "$49,000 or less",
+  income == 8 ~ "$50,000 to $99,999",
+  income == 9 ~ "$100,000 to $149,999",
+  income == 10 ~ "$150,000 or more",
+  income == 11 ~ "$150,000 or more",
+  income == 77 ~ "I don't know/Prefer not to answer"
+))
+
+victoria_new_ID_gps$income_1 <- factor(victoria_new_ID_gps$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
+
+tabyl(victoria_new_ID_gps$income_2)
+summary(victoria_new_ID_gps$income)
+```
+
 
 ## Income
 ```{r}
