--- a/gps_participant_survey_analysis.Rmd
+++ b/gps_participant_survey_analysis.Rmd
@@ -45,19 +45,20 @@ library(sf)
 
 ## Loading in Data
 ```{r}
-victoria_gps_only <- read_csv("victoria_gps_only.csv")
+victoria_small_merged <- read_csv("victoria_small_merged.csv")
+```
+
+
+## Age descriptive Statistics for Victoria
+```{r}
+summary(victoria_small_merged$age_calculated, na.rm = TRUE)
+
+sd(victoria_small_merged$age_calculated)
 ```
 
 ## Age descriptive Statistics for Victoria
 ```{r}
-summary(victoria_gps_only$age_calculated, na.rm = TRUE)
-
-sd(victoria_gps_only$age_calculated)
-```
-
-## Age descriptive Statistics for Victoria
-```{r}
-age_categories_plot <- ggplot (data = victoria_gps_only, aes(age_categories)) + 
+age_categories_plot <- ggplot (data = victoria_small_merged, aes(age_categories)) + 
     geom_bar() + 
         labs(title = "Age ", 
            x = "Age Categories", 
@@ -67,7 +68,7 @@ plot(age_categories_plot)
 
 ## Gender
 ```{r}
-tabyl(victoria_gps_only$gender)
+tabyl(victoria_small_merged$gender)
 
 gender_plot <- ggplot(data = victoria_new_ID_gps, aes(gender)) +
   geom_bar(aes(fill = gender)) +
@@ -80,8 +81,8 @@ plot(gender_plot)
 
 ## Health Status
 ```{r}
-victoria_gps_only$health_status <- factor(victoria_gps_only$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
-tabyl(victoria_gps_only$health_status)
+victoria_small_merged$health_status <- factor(victoria_small_merged$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
+tabyl(victoria_small_merged$health_status)
 
 health_plot <- ggplot(data = victoria_gps_only, aes(health_status)) +
   geom_bar() +
@@ -93,7 +94,7 @@ plot(health_plot)
 
 ## Marital Status
 ```{r}
-tabyl(victoria_gps_only$marital)
+tabyl(victoria_small_merged$marital)
 marital_plot <- ggplot(data = victoria_gps_only, aes(marital)) +
   geom_bar() +
   labs(title = "Marital Status",
@@ -103,7 +104,7 @@ plot(marital_plot)
 ```
 ## Ethnicity 
 ```{r}
-tabyl(victoria_gps_only$ethnicity)
+tabyl(victoria_small_merged$ethnicity)
 ethnicity_plot <- ggplot(data = victoria_gps_only, aes(ethnicity)) +
   geom_bar() +
   labs(title = "Ethnicity",
@@ -115,9 +116,9 @@ plot(ethnicity_plot)
 ## Income
 ```{r}
 
-victoria_gps_only$income_1 <- factor(victoria_gps_only$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
+victoria_small_merged$income_1 <- factor(victoria_small_merged$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
 
-tabyl(victoria_gps_only$income_1)
+tabyl(victoria_small_merged$income_1)
 
 
 income_plot <- ggplot(data = victoria_new_ID_gps, aes(income_1)) +
@@ -126,83 +127,86 @@ income_plot <- ggplot(data = victoria_new_ID_gps, aes(income_1)) +
        x = "Income Level",
        y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
 plot(income_plot)
-```
 
-## Support for the AAA
-```{r}
-tabyl(victoria_gps_only$aaa_familiarity_1)
-
-victoria_new_ID_gps$aaa_idea_1 <- factor(victoria_new_ID_gps$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
-tabyl(victoria_gps_only$aaa_idea_1)
-tabyl(victoria_gps_only$aaa_bike_more_1)
-```
-
-##Preference for Separated Bike Lane
-```{r}
-victoria_gps_only$major_street_separated_bike_lane <- factor(victoria_gps_only$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
-tabyl(victoria_gps_only$major_street_separated_bike_lane)
+tabyl(victoria_small_merged$income_2)
 ```
 
 ## Children 
 ```{r}
-tabyl(victoria_gps_only$children_1)
-tabyl(victoria_gps_only$living_children)
+tabyl(victoria_small_merged$children_1)
 ```
 
 ## Born in Canada
 ```{r}
-tabyl(victoria_gps_only$born_canada)
+tabyl(victoria_small_merged$born_canada)
 ```
 
 ## Car Access
 ```{r}
-tabyl(victoria_gps_only$car_access)
+tabyl(victoria_small_merged$car_access)
 
-victoria_gps_only <- victoria_gps_only %>% mutate(car_access_1 = case_when(
+victoria_small_merged <- victoria_small_merged %>% mutate(car_access_1 = case_when(
   car_access == 1 ~ "Yes",
   car_access == 2 ~ "No"
 ))
-tabyl(victoria_gps_only$car_access_1)
+tabyl(victoria_small_merged$car_access_1)
 tabyl(victoria_gps_only$cars_household)
+```
+
+## Support for the AAA
+```{r}
+tabyl(victoria_small_merged$aaa_familiarity_1)
+
+victoria_small_merged$aaa_idea_1 <- factor(victoria_small_merged$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
+tabyl(victoria_small_merged$aaa_idea_1)
+tabyl(victoria_small_merged$aaa_bike_more_1)
+```
+
+##Preference for Separated Bike Lane
+```{r}
+victoria_small_merged$major_street_separated_bike_lane <- factor(victoria_small_merged$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
+tabyl(victoria_small_merged$major_street_separated_bike_lane)
+
+tabyl(victoria_small_merged$major_street_separated_bike_lane)
 ```
 
 ## Percieved Cycling Safety in Victoria
 ```{r}
-victoria_gps_only <- victoria_gps_only %>% mutate(bike_safety_1 = case_when(
+victoria_small_merged <- victoria_small_merged %>% mutate(bike_safety_1 = case_when(
   bike_safety == 1 ~ "Very safe",
   bike_safety == 2 ~ "Somewhat safe",
   bike_safety == 3 ~ "Neither safe nor unsafe",
   bike_safety == 4 ~ "Somewhat dangerous",
   bike_safety == 5 ~ "Very dangerous",
 ))
-tabyl(victoria_gps_only$bike_safety_1)
+tabyl(victoria_small_merged$bike_safety_1)
 
-victoria_gps_only$bike_safety_1 <- factor(victoria_gps_only$bike_safety_1, c( "Very safe", "Somewhat safe", "Neither safe nor unsafe", "Somewhat dangerous", "Very dangerous"))
-tabyl(victoria_gps_only$bike_safety_1)
+victoria_small_merged$bike_safety_1 <- factor(victoria_small_merged$bike_safety_1, c( "Very safe", "Somewhat safe", "Neither safe nor unsafe", "Somewhat dangerous", "Very dangerous"))
+tabyl(victoria_small_merged$bike_safety_1)
 ```
 
 ## Bike frequency by season
 ```{r}
-tabyl(victoria_gps_only$bike_freq_a)
-summary(victoria_gps_only$bike_freq_a)
-sd(victoria_gps_only$bike_freq_a)
-tabyl(victoria_gps_only$bike_freq_b)
-summary(victoria_gps_only$bike_freq_b)
-sd(victoria_gps_only$bike_freq_b, na.rm = TRUE)
-tabyl(victoria_gps_only$bike_freq_c)
-summary(victoria_gps_only$bike_freq_c)
-sd(victoria_gps_only$bike_freq_c)
-tabyl(victoria_gps_only$bike_freq_d)
-summary(victoria_gps_only$bike_freq_d)
-sd(victoria_gps_only$bike_freq_d, na.rm = TRUE)
+
+summary(victoria_small_merged$bike_freq_a)
+sd(victoria_small_merged$bike_freq_a)
+
+summary(victoria_small_merged$bike_freq_b)
+sd(victoria_small_merged$bike_freq_b, na.rm = TRUE)
+
+summary(victoria_small_merged$bike_freq_c)
+sd(victoria_small_merged$bike_freq_c)
+
+summary(victoria_small_merged$bike_freq_d)
+sd(victoria_small_merged$bike_freq_d, na.rm = TRUE)
 ```
 
 ## Cycing infrastructure preference
 ```{r}
-tabyl(victoria_gps_only$path_comf)
-tabyl(victoria_gps_only$residential_street_comf)
-tabyl(victoria_gps_only$res_street_traffic_calming_comf)
-tabyl(victoria_gps_only$major_street_no_bike_lane)
-tabyl(victoria_gps_only$major_street_bike_lane)
+tabyl(victoria_small_merged$path_comf)
+tabyl(victoria_small_merged$residential_street_comf)
+tabyl(victoria_small_merged$res_street_traffic_calming_comf)
+tabyl(victoria_small_merged$major_street_no_bike_lane)
+tabyl(victoria_small_merged$major_street_bike_lane)
 ```
 
