--- a/sensedoc_dates.Rmd
+++ b/sensedoc_dates.Rmd
@@ -2,7 +2,9 @@
 title: "sensedoc_dates"
 author: "Melissa Tobin"
 date: "10/06/2019"
-output: html_document
+output: 
+  html_document:
+        keep_md: true
 ---
 
 ```{r setup, include=FALSE}
