--- a/exposure_outcome_updated.Rmd
+++ b/exposure_outcome_updated.Rmd
@@ -2,7 +2,9 @@
 title: "exposure_outcome_updated"
 author: "Melissa Tobin"
 date: "11/06/2019"
-output: html_document
+output:   
+  html_document:
+        keep_md: true
 ---
 
 ```{r setup, include=FALSE}
