--- a/GPS_data_analysis.Rmd
+++ b/GPS_data_analysis.Rmd
@@ -314,7 +314,7 @@ fwrite(wear_time_stamps_filtered, "wear_time_stamps_updated_final.csv", sep = ",
 
 ## Reading in table of power
 ```{r}
-table_of_power <- fread("victoria_top_minute.csv")
+table_of_power <- read_csv("victoria_top_minute.csv")
 
 doy_start_end_filtered <- read_csv("doy_start_end_filtered.csv")
 doy_start_end_final <- doy_start_end_filtered %>% dplyr::select("interact_id", "gps_id", "doy_start", "doy_end")
@@ -362,6 +362,8 @@ table_of_power_merged_2 <- table_of_power_merged_2 %>% group_by(interact_id, doy
 
 write_csv(table_of_power_merged_2, "table_of_power_merged_2.csv")
 
+
+
 table_of_power_merged_3 <- table_of_power_merged_2 %>% group_by(interact_id, doy_1) %>% 
   summarise(day_sedentary = first(day_sedentary), 
             day_light = first(day_light), 
@@ -384,17 +386,24 @@ write_csv(table_of_power_merged_3, "table_of_power_merged_3.csv")
 ```{r}
 table_of_power_merged_4 <- table_of_power_merged_3 %>% dplyr::select("interact_id", "total_sedentary", "total_light", "total_moderate", "total_vigorous", "total_pa") %>% 
   distinct(interact_id, .keep_all = TRUE)
+
+write_csv(table_of_power_merged_4, "table_of_power_merged_4.csv")
 ```
 
 ## Reading in victoria_small_merged
 ```{r}
-victoria_small_merged <- read_csv("victoria_small_merged.csv")
+victoria_small_merged_1 <- read_csv("victoria_small_merged_1.csv")
 
-power_victoria_merged <- full_join(table_of_power_merged_2, victoria_small_merged, by = "interact_id")
+table_of_power_merged_2 <- read_csv("table_of_power_merged_2.csv")
+
+table_of_power_merged_4 <- read_csv("table_of_power_merged_4.csv")
+
+
+
+power_victoria_merged <- full_join(table_of_power_merged_2, victoria_small_merged_1, by = "interact_id") #update once I get new table of power. 
 write_csv(power_victoria_merged, "power_victoria_merged.csv")
-summary_power_victoria_merged <- full_join(table_of_power_merged_4, victoria_small_merged, by = "interact_id")
+summary_power_victoria_merged <- full_join(table_of_power_merged_4, victoria_small_merged_1, by = "interact_id") #update once you get new table of power
 write_csv(summary_power_victoria_merged, "summary_power_victoria_merged.csv")
-
 ```
 
 
