--- a/gps_participant_survey_analysis.Rmd
+++ b/gps_participant_survey_analysis.Rmd
@@ -25,7 +25,6 @@ setwd(path)
 
 ## Loading Packages
 ```{r}
-install.packages("lmtest")
 library(lmtest)
 library(tidyverse)
 library(ggplot2)
@@ -49,20 +48,20 @@ library(sf)
 
 ## Loading in Data
 ```{r}
-victoria_small_merged <- read_csv("victoria_small_merged.csv")
+victoria_small_merged_1 <- read_csv("victoria_small_merged_1.csv")
 ```
 
 
 ## Age descriptive Statistics for Victoria
 ```{r}
-summary(victoria_small_merged$age_calculated, na.rm = TRUE)
+summary(victoria_small_merged_1$age_calculated, na.rm = TRUE)
 
-sd(victoria_small_merged$age_calculated)
+sd(victoria_small_merged_1$age_calculated)
 ```
 
 ## Age descriptive Statistics for Victoria
 ```{r}
-age_categories_plot <- ggplot (data = victoria_small_merged, aes(age_categories)) + 
+age_categories_plot <- ggplot (data = victoria_small_merged_1, aes(age_categories)) + 
     geom_bar() + 
         labs(title = "Age ", 
            x = "Age Categories", 
@@ -72,9 +71,9 @@ plot(age_categories_plot)
 
 ## Gender
 ```{r}
-tabyl(victoria_small_merged$gender)
+tabyl(victoria_small_merged_1$gender)
 
-gender_plot <- ggplot(data = victoria_small_merged, aes(gender)) +
+gender_plot <- ggplot(data = victoria_small_merged_1, aes(gender)) +
   geom_bar(aes(fill = gender)) +
   labs(title = "Gender",
        x = "Gender Type",
@@ -85,10 +84,10 @@ plot(gender_plot)
 
 ## Health Status
 ```{r}
-victoria_small_merged$health_status <- factor(victoria_small_merged$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
-tabyl(victoria_small_merged$health_status)
+victoria_small_merged_1$health_status <- factor(victoria_small_merged_1$health_status, c("Poor", "Fair", "Good", "Very Good", "Excellent"))
+tabyl(victoria_small_merged_1$health_status)
 
-health_plot <- ggplot(data = victoria_small_merged, aes(health_status)) +
+health_plot <- ggplot(data = victoria_small_merged_1, aes(health_status)) +
   geom_bar() +
   labs(title = "Health Status",
        x = "Health Status",
@@ -98,18 +97,19 @@ plot(health_plot)
 
 ## Marital Status
 ```{r}
-tabyl(victoria_small_merged$marital)
-marital_plot <- ggplot(data = victoria_small_merged, aes(marital)) +
+tabyl(victoria_small_merged_1$marital)
+marital_plot <- ggplot(data = victoria_small_merged_1, aes(marital)) +
   geom_bar() +
   labs(title = "Marital Status",
        x = "Marital Status",
        y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
 plot(marital_plot)
 ```
+
 ## Ethnicity 
 ```{r}
-tabyl(victoria_small_merged$ethnicity)
-ethnicity_plot <- ggplot(data = victoria_small_merged, aes(ethnicity)) +
+tabyl(victoria_small_merged_1$ethnicity)
+ethnicity_plot <- ggplot(data = victoria_small_merged_1, aes(ethnicity)) +
   geom_bar() +
   labs(title = "Ethnicity",
        x = "Ethnic Group",
@@ -120,97 +120,94 @@ plot(ethnicity_plot)
 ## Income
 ```{r}
 
-victoria_small_merged$income_1 <- factor(victoria_small_merged$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
+victoria_small_merged_1$income_1 <- factor(victoria_small_merged_1$income_1, c("No income", "$1 to $9,999", "$10,000 to $14,999", "$15,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999","$50,000 to $99,999","$100,000 to $149,999","$150,000 to $199,999", "$200,000 or more", "I don't know/Prefer not to answer"))
 
-tabyl(victoria_small_merged$income_1)
+tabyl(victoria_small_merged_1$income_1)
 
 
-income_plot <- ggplot(data = victoria_small_merged, aes(income_1)) +
+income_plot <- ggplot(data = victoria_small_merged_1, aes(income_1)) +
   geom_bar() +
   labs(title = "Income",
        x = "Income Level",
        y = "Number of Participants (n)") + theme(axis.text.x = element_text(angle=60, hjust=1))
 plot(income_plot)
 
-tabyl(victoria_small_merged$income_2)
+tabyl(victoria_small_merged_1$income_2)
 ```
 
 ## Children 
 ```{r}
-tabyl(victoria_small_merged$children_1)
+tabyl(victoria_small_merged_1$children_1)
 ```
 
 ## Born in Canada
 ```{r}
-tabyl(victoria_small_merged$born_canada)
+tabyl(victoria_small_merged_1$born_canada)
 ```
 
 ## Car Access
 ```{r}
-tabyl(victoria_small_merged$car_access)
+tabyl(victoria_small_merged_1$car_access)
 
-victoria_small_merged <- victoria_small_merged %>% mutate(car_access_1 = case_when(
+victoria_small_merged_1 <- victoria_small_merged_1 %>% mutate(car_access_1 = case_when(
   car_access == 1 ~ "Yes",
   car_access == 2 ~ "No"
 ))
-tabyl(victoria_small_merged$car_access_1)
+tabyl(victoria_small_merged_1$car_access_1)
 
 ```
 
 ## Support for the AAA
 ```{r}
-tabyl(victoria_small_merged$aaa_familiarity_1)
+tabyl(victoria_small_merged_1$aaa_familiarity_1)
 
-victoria_small_merged$aaa_idea_1 <- factor(victoria_small_merged$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
-tabyl(victoria_small_merged$aaa_idea_1)
-tabyl(victoria_small_merged$aaa_bike_more_1)
+victoria_small_merged_1$aaa_idea_1 <- factor(victoria_small_merged_1$aaa_idea_1, c("I don't know", "Very bad idea", "Somewhat bad idea", "Somewhat good idea", "Very good idea"))
+tabyl(victoria_small_merged_1$aaa_idea_1)
+tabyl(victoria_small_merged_1$aaa_bike_more_1)
 ```
 
 ##Preference for Separated Bike Lane
 ```{r}
-victoria_small_merged$major_street_separated_bike_lane <- factor(victoria_small_merged$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
-tabyl(victoria_small_merged$major_street_separated_bike_lane)
-
-tabyl(victoria_small_merged$major_street_separated_bike_lane)
+victoria_small_merged_1$major_street_separated_bike_lane <- factor(victoria_small_merged_1$major_street_separated_bike_lane, c( "Very uncomfortable", "Somewhat uncomfortable", "Somewhat comfortable", "Very comfortable", "I don't know/Prefer not to answer"))
+tabyl(victoria_small_merged_1$major_street_separated_bike_lane)
 ```
 
 ## Percieved Cycling Safety in Victoria
 ```{r}
-victoria_small_merged <- victoria_small_merged %>% mutate(bike_safety_1 = case_when(
+victoria_small_merged_1 <- victoria_small_merged_1 %>% mutate(bike_safety_1 = case_when(
   bike_safety == 1 ~ "Very safe",
   bike_safety == 2 ~ "Somewhat safe",
   bike_safety == 3 ~ "Neither safe nor unsafe",
   bike_safety == 4 ~ "Somewhat dangerous",
   bike_safety == 5 ~ "Very dangerous",
 ))
-tabyl(victoria_small_merged$bike_safety_1)
+tabyl(victoria_small_merged_1$bike_safety_1)
 
-victoria_small_merged$bike_safety_1 <- factor(victoria_small_merged$bike_safety_1, c( "Very safe", "Somewhat safe", "Neither safe nor unsafe", "Somewhat dangerous", "Very dangerous"))
-tabyl(victoria_small_merged$bike_safety_1)
+victoria_small_merged_1$bike_safety_1 <- factor(victoria_small_merged_1$bike_safety_1, c( "Very safe", "Somewhat safe", "Neither safe nor unsafe", "Somewhat dangerous", "Very dangerous"))
+tabyl(victoria_small_merged_1$bike_safety_1)
 ```
 
 ## Bike frequency by season
 ```{r}
+summary(victoria_small_merged_1$bike_freq_a)
+sd(victoria_small_merged_1$bike_freq_a)
 
-summary(victoria_small_merged$bike_freq_a)
-sd(victoria_small_merged$bike_freq_a)
+summary(victoria_small_merged_1$bike_freq_b)
+sd(victoria_small_merged_1$bike_freq_b, na.rm = TRUE)
 
-summary(victoria_small_merged$bike_freq_b)
-sd(victoria_small_merged$bike_freq_b, na.rm = TRUE)
+summary(victoria_small_merged_1$bike_freq_c)
+sd(victoria_small_merged_1$bike_freq_c)
 
-summary(victoria_small_merged$bike_freq_c)
-sd(victoria_small_merged$bike_freq_c)
-
-summary(victoria_small_merged$bike_freq_d)
-sd(victoria_small_merged$bike_freq_d, na.rm = TRUE)
+summary(victoria_small_merged_1$bike_freq_d)
+sd(victoria_small_merged_1$bike_freq_d, na.rm = TRUE)
 ```
 
 ## Cycing infrastructure preference
 ```{r}
-tabyl(victoria_small_merged$path_comf)
-tabyl(victoria_small_merged$residential_street_comf)
-tabyl(victoria_small_merged$res_street_traffic_calming_comf)
-tabyl(victoria_small_merged$major_street_no_bike_lane)
-tabyl(victoria_small_merged$major_street_bike_lane)
+tabyl(victoria_small_merged_1$path_comf)
+tabyl(victoria_small_merged_1$residential_street_comf)
+tabyl(victoria_small_merged_1$res_street_traffic_calming_comf)
+tabyl(victoria_small_merged_1$major_street_no_bike_lane)
+tabyl(victoria_small_merged_1$major_street_bike_lane)
 ```
 
